--- a/app.css
+++ b/app.css
@@ -40,10 +40,15 @@ justify-content: center;
 align-items: center;
 text-align: center;
 }
+.destination:hover h2 {
+transform: rotate(0deg);
+}
+
 
 h2 {
 margin: 0;
 transform: rotate(-45deg);
+transform: transation 0.5s;
 text-shadow: 0 0 5px #01579b;
 }
 
